WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201601
[Win][WebKitLegacy] WebKitDLL.h(53,37): warning: 'gClassNameCount' has C-linkage specified, but returns user-defined type 'HashCountedSet<WTF::String> &' which is incompatible with C [-Wreturn-type-c-linkage]
https://bugs.webkit.org/show_bug.cgi?id=201601
Summary
[Win][WebKitLegacy] WebKitDLL.h(53,37): warning: 'gClassNameCount' has C-link...
Fujii Hironori
Reported
2019-09-09 00:26:47 PDT
[Win][WebKitLegacy] WebKitDLL.h(53,37): warning: 'gClassNameCount' has C-linkage specified, but returns user-defined type 'HashCountedSet<WTF::String> &' which is incompatible with C [-Wreturn-type-c-linkage] clang-cl reports:
> [4452/5007] Building CXX object Source\WebKitLegacy\CMakeFiles\WebKitLegacy.dir\win\WebKitDLL.cpp.obj > In file included from ..\..\Source\WebKitLegacy\win\WebKitDLL.cpp:27: > ..\..\Source\WebKitLegacy\win/WebKitDLL.h(53,37): warning: 'gClassNameCount' has C-linkage specified, but returns user-defined type 'HashCountedSet<WTF::String> &' which is incompatible with C [-Wreturn-type-c-linkage] > extern HashCountedSet<WTF::String>& gClassNameCount(); > ^ > 1 warning generated.
Attachments
Patch
(1.96 KB, patch)
2019-09-09 00:33 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2019-09-09 00:33:46 PDT
Created
attachment 378352
[details]
Patch
Fujii Hironori
Comment 2
2019-09-09 18:29:35 PDT
Comment on
attachment 378352
[details]
Patch Clearing flags on attachment: 378352 Committed
r249682
: <
https://trac.webkit.org/changeset/249682
>
Fujii Hironori
Comment 3
2019-09-09 18:29:38 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-09-09 18:30:18 PDT
<
rdar://problem/55207200
>
Radar WebKit Bug Importer
Comment 5
2019-09-09 18:30:18 PDT
<
rdar://problem/55207201
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug