[Win][WebKitLegacy] WebKitDLL.h(53,37): warning: 'gClassNameCount' has C-linkage specified, but returns user-defined type 'HashCountedSet<WTF::String> &' which is incompatible with C [-Wreturn-type-c-linkage] https://bugs.webkit.org/show_bug.cgi?id=201601

Reviewed by Ross Kirsling.

Fixed a clang-cl warning. Names which aren't dllexport-ed don't
need to be in a extern "C" scope because they aren't exported to
other DLLs.

* WebKitDLL.h: Moved some variables and gClassNameCount() out of extern "C" scope.

Canonical link: https://commits.webkit.org/215268@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249682 268f45cc-cd09-0410-ab3c-d52691b4dbfc